dockerised the app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=identity
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/identity
-spring.datasource.username=postgres
-spring.datasource.password=rohan123
+spring.datasource.url=jdbc:postgresql://ep-old-star-a130sl9j-pooler.ap-southeast-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_a0FWosQmZwU4&sslmode=require
+#spring.datasource.username=postgres
+#spring.datasource.password=rohan123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8081
+server.port=8080
